# alinea-doc

./: CNAME  LICENSE  index.html  mkdocs.yml  pyproject.toml
.github/ISSUE_TEMPLATE/: feature_request.md  question.md
.github/workflows/: prepare-diagrams.yaml  release-doc.yaml
0.1/: 404.html  index.html
0.1/architecture/components/: index.html
0.1/architecture/hardware/: index.html
0.1/background/: index.html
0.1/decission-log/overview/: index.html
0.1/libs/overview/: index.html
0.1/quick-start/: index.html
0.1/search/: search_index.json
0.1/services/overview/: index.html
0.1/services/tenant-manager/: index.html
0.1/standardisation/metadata/: index.html
0.1/standardisation/overview/: index.html
diagrams/: Untitled Diagram.drawio  communication.drawio  data-models.drawio  multi-tenant.drawio  tenant-manager.drawio
diagrams/alinea/: c3-components.puml  conceptual-model.puml
diagrams/configuration-management/: c1-system-context.puml  c2-container.puml  c3-components.puml
docs/: background.md  index.md  quick-start.md
docs/architecture/: components.md  hardware.md
docs/decission-log/: overview.md
docs/design/: ddd.md  overview.md
docs/libs/: overview.md
docs/libs/python/: core.md  (+1 more)
docs/services/: index.md  overview.md  project-manager.md  tenant-manager.md
docs/standardisation/: metadata.md  multi-tenant.md  overview.md
docs/standardization/: mesh.md  multi-tenant.md  overview.md
latest/: 404.html  index.html  sitemap.xml
latest/background/: index.html
latest/quick-start/: index.html
latest/search/: search_index.json
(+94 files in other folders)
